<resources>
    <string name="app_name">2105_caculator</string>
    // number button
    <string name="one">1</string>3
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>

    //function
    <string name="clear">AC</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="equals">=</string>
    <string name="plusMinus">+/-</string>
    <string name="percentage">%</string>
    <string name="point">.</string>

    //display
    <string name="display">enter</string>


</resources>
