<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display"
        app:layout_constraintVertical_bias="0.95">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clearBTN"
                style="@style/Widget.AppCompat.Button.Borderless"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/light_gray_change"
                android:onClick="clearBTN"
                android:text="@string/clear"
                android:textSize="20sp"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/plusMinusBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/light_gray_change"
                android:text="@string/plusMinus"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/percentageBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/light_gray_change"
                android:textSize="20sp"
                android:text="@string/percentage"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/divideBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/orange_change"
                android:onClick="divideBTN"
                android:text="@string/divide"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck"
                tools:targetApi="lollipop" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sevenBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/dark_gray_change"
                android:onClick="sevenBTN"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/eightBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/dark_gray_change"
                android:onClick="eightBTN"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/ninBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/dark_gray_change"
                android:onClick="nineBTN"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/multiplyBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/orange_change"
                android:onClick="multiplyBTN"
                android:text="@string/multiply"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck"
                tools:targetApi="lollipop" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/fourBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/dark_gray_change"
                android:onClick="fourBTN"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/fiveBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/dark_gray_change"
                android:onClick="fiveBTN"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/sixBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/dark_gray_change"
                android:onClick="sixBTN"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/subtractBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/orange_change"
                android:onClick="subtractBTN"
                android:text="@string/subtract"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck"
                tools:targetApi="lollipop" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/oneBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/dark_gray_change"
                android:onClick="oneBTN"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/twoBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/dark_gray_change"
                android:onClick="twoBTN"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/threeBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/dark_gray_change"
                android:onClick="threeBTN"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/addBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/orange_change"
                android:onClick="addBTN"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck"
                tools:targetApi="lollipop" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="61dp">

            <Button
                android:id="@+id/zeroBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="25"
                android:background="@drawable/dark_gray_change"
                android:onClick="zeroBTN"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/pointBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/dark_gray_change"
                android:onClick="pointBTN"
                android:text="@string/point"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/equalsBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/orange_change"
                android:onClick="equalsBTN"
                android:text="@string/equals"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck"
                tools:targetApi="lollipop" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/display"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/display"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26"
        android:autofillHints="false"
        android:inputType="none"
        android:textSize="60sp"
        android:textAlignment="textEnd"
        tools:ignore="LabelFor"
        android:gravity="end" />

</androidx.constraintlayout.widget.ConstraintLayout>